--- a/index.html
+++ b/index.html
@@ -1,33 +1,1 @@
-# HTMail
-HTML email builder
-# HTMail Builder 
-
-Expedite HTML email development with the help of Gulp, SASS, HAML, Inline CSS
-
-### Setup 
-
-Clone the repo
-
-`git clone https://github.com/nsarafa/HTMail.git`
-
-Install all the things
-
-`npm install`
-
-### How to..
-
-Compile HAML to HTML
-
-`gulp sass`
-
-Compile SASS to CSS
-
-`gulp sass`
-
-Inline your CSS, as well as compile your SASS to CSS
-
-`gulp inline`
-
-Compile your HAML, SCSS while Inlining the compiled CSS into your HTML in real time
-
-`gulp watch`
+<p>kuyiuyiyiu</p>
