--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@ Stray Kids</h2></td>
       <a href="http://example.com">ссылка</a>.
     </p>
 
-    <p>Это второй абзац. Он содержит <em>акцентирующий</em> текст.</p>
+    <p>Я не ем детей, не дарите!<em>акцентирующий</em> текст.</p>
 
     <ul>
-      <li>Элемент один</li>
-      <li>Элемент два</li>
-      <li>Элемент <em>три</em></li>
+      <li>что</li>
+      <li>что-то</li>
+      <li>что <em>три</em></li>
     </ul>
   </body>
 </html>
