--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <a href="https://www.w3schools.com">Сайт помощьник3</a>
 <a href="https://jsitor.com/ATE-5oOL6X">Сайт помошник4</a>
 <a href="https://app.leadteh.ru/">Конструктор ботов</a>
+<a href="https://vk.com/topic-149017466_46631721">Godot</a>
 <font face=”Arial” size=”8” color=”red” >Я люблю котиков и липтон , но больше всего я ЛюБлЮ СПАТЬ</font>
 <font color=’#191970’>Котики = спать , я = спать</font>
 <MARQUEE BEHAVIOR=slide>
