--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h6>5 СПАТЬ СПАТЬ СПАТЬ и ТОЧка!!!!!!!</h6>
 <a href="https://html-css-js.com/">Сайт помощьник1</a>.
 <a href="https://www.w3schools.com/">Сайт помощьник2</a>
-<a href="https://jsitor.com/">Сайт отлатчик</a>
+<a href="https://html-css-js.com/">Сайт отлатчик</a>
 <a href="https://www.w3schools.com">Сайт помощьник3</a>
 <a href="https://jsitor.com/ATE-5oOL6X">Сайт помошник4</a>
 <a href="https://app.leadteh.ru/">Конструктор ботов</a>
