--- a/index.html
+++ b/index.html
@@ -92,5 +92,30 @@ Stray Kids</h2></td>
       <li>что-то</li>
       <li>что <em>три</em></li>
     </ul>
+
+<p>Это таблица</p>
+
+
+
+
+      <html>
+<head>
+<title>HTML код таблицы, примеры</title>
+</head>
+<body>
+<table border="1">
+<tr>
+<td>ячейка 1, первый ряд</td>
+<td>ячейка 2, первый ряд</td>
+</tr>
+<tr>
+<td>ячейка 1, второй ряд</td>
+<td>ячейка 2, второй ряд</td>
+</tr>
+</table>
+</body>
+</html>
+
+      
   </body>
 </html>
