--- a/index.html
+++ b/index.html
@@ -95,27 +95,18 @@ Stray Kids</h2></td>
 
 <p>Это таблица</p>
 
-
-
-
-      <html>
-<head>
-<title>HTML код таблицы, примеры</title>
-</head>
-<body>
-<table border="1">
-<tr>
-<td>ячейка 1, первый ряд</td>
-<td>ячейка 2, первый ряд</td>
+      <table width="100%" height="100%" valign="top">
+<tr height="10%" bgcolor="silver">
+<td colspan="3"><h3>Это не флаг Бразилии</h3></td>
 </tr>
-<tr>
-<td>ячейка 1, второй ряд</td>
-<td>ячейка 2, второй ряд</td>
+<tr height="80%">
+<td width="15%" bgcolor="#A52A2A"><h2>Веля топ</h2></td>
+<td bgcolor="yellow"><h2>Бразилия топ</h2></td>
+<td width="15%" bgcolor='#FFF5EE'><h2>Корея топ
+Stray Kids</h2></td>
 </tr>
+<tr bgcolor="silver">
+<td colspan="3"></td>
 </table>
-</body>
-</html>
-
-      
   </body>
 </html>
