--- a/index.html
+++ b/index.html
@@ -108,5 +108,10 @@ Stray Kids</h2></td>
 <tr bgcolor="silver">
 <td colspan="3"></td>
 </table>
+    <ol>
+        <li> НА марсе нету людей и кислорода, а на земле есть очень хорошие компьютеры.</li>
+          
+          
+    </ol>
   </body>
 </html>
