--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@ Stray Kids</h2></td>
 
       <table width="100%" height="100%" valign="top">
 <tr height="5%" bgcolor="silver">
-<td colspan="3"><h3>Это не флаг Бразилии</h3></td>
+<td colspan="3"><h3>Это верх таблицы</h3></td>
 </tr>
 <tr height="50%">
-<td width="5%" bgcolor="#A52A2A"><h2>Веля топ</h2></td>
-<td bgcolor="yellow"><h2>Бразилия топ</h2></td>
-<td width="5%" bgcolor='#FFF5EE'><h2>Корея топ
+<td width="5%" bgcolor="#A52A2A"><h2>это сбоку</h2></td>
+<td bgcolor="yellow"><h2>это центр</h2></td>
+<td width="5%" bgcolor='#FFF5EE'><h2>это другой бок
 Stray Kids</h2></td>
 </tr>
 <tr bgcolor="silver">
