--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ Stray Kids</h2></td>
 </table>
     <ol>
         <li> НА марсе нету людей и кислорода, а на земле есть очень хорошие компьютеры.</li>
-          
+        <p>Сдесь обучалка как не утонуть если ты проволился под лед.</p>
+        <li>Самое главное не паниковать.</li>        
+        <li>Сначало надо выпить согревающую таблетку чтобы ты не замерз во льду.</li>
           
     </ol>
   </body>
