--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@ Stray Kids</h2></td>
 <td colspan="3"></td>
 </table>
     <ol>
-        <li> НА марсе нету людей и кислорода, а на земле есть очень хорошие компьютеры.</li>
         <p>Сдесь обучалка как не утонуть если ты проволился под лед.</p>
         <li>Самое главное не паниковать.</li>        
         <li>Сначало надо выпить согревающую таблетку чтобы ты не замерз во льду.</li>
+         <li>После этого надо пробить лед и выпрыгнуть наружу</li>
+         <li>Но нельзя слишком сильно прыгать а то можно удариться головой об луну.</li>
           
     </ol>
   </body>
