--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@ Stray Kids</h2></td>
         <li>Сначало надо выпить согревающую таблетку чтобы ты не замерз во льду.</li>
          <li>После этого надо пробить лед и выпрыгнуть наружу</li>
          <li>Но нельзя слишком сильно прыгать а то можно удариться головой об луну.</li>
-          
-    </ol>
+        <p>Остаётся самое легкое</p>
+         <li>Нужно доплыть до айсберга</li>
+           <li>Потом найти весла</li>
+         <li>Ну всё дело за малым нужно просто доплыть на айсберге до дома.</li>
+    </ol> 
   </body>
 </html>
