--- a/index.html
+++ b/index.html
@@ -94,8 +94,22 @@ Stray Kids</h2></td>
     </ul>
 
 <p>Это таблица</p>
+&lt;table width="100%" height="100%" valign="top"&gt;<br>
+&lt;tr height="5%" bgcolor="silver"&gt;<br>
+&lt;td colspan="3"&gt;&lt;h3&gt;Это верх таблицы&lt;/h3&gt;&lt;/td&gt;<br>
+&lt;/tr&gt;<br>
+&lt;tr height="50%"&gt;<br>
+&lt;td width="5%" bgcolor="#A52A2A"&gt;&lt;h2&gt;это сбоку&lt;/h2&gt;&lt;/td&gt;<br>
+&lt;td bgcolor="yellow"><h2>это центр&lt;/h2&gt;&lt;/td&gt;<br>
+&lt;td width="5%" bgcolor='#FFF5EE'&gt;&lt;h2&gt;это другой бок<br>
+&lt;/h2&gt;&lt;/td&gt;<br>
+&lt;/tr&gt;<br>
+&lt;tr bgcolor="silver"&gt;<br>
+&lt;td colspan="3"&gt;&lt;/td&gt;<br>
+&lt;/table&gt;<br>
 
-      <table width="100%" height="100%" valign="top">
+      
+<table width="100%" height="100%" valign="top">
 <tr height="5%" bgcolor="silver">
 <td colspan="3"><h3>Это верх таблицы</h3></td>
 </tr>
