--- a/index.html
+++ b/index.html
@@ -133,5 +133,6 @@ Stray Kids</h2></td>
            <li>Потом найти весла</li>
          <li>Ну всё дело за малым нужно просто доплыть на айсберге до дома.</li>
     </ol> 
+  <tr bgcolor='#FFF5EE'>
   </body>
 </html>
