--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p data-type="info">Информационный текст</p> 
       <p data-type="warning">Предупреждающий текст</p> 
       <p data-type="error">Текст ошибки</p> 
-<img align="right" src="2.jpg" weight=400 height=400>
+<img align="right" src="wall.jpg" weight=400 height=400>
 <a href="about.html">мо компа</a>
 <A HREF=INDEX2.HTML target="_top"><img src="2.jpg"></A>
 
