--- a/index.html
+++ b/index.html
@@ -120,5 +120,10 @@
          <li>Ну всё дело за малым нужно просто доплыть на айсберге до дома.</li>
     </ol> 
   <tr bgcolor='#FFF5EE'>
+      <video width="320" height="240" controls="controls" poster="logo.png">
+	<source src="movie.mp4" type="video/mp4">
+	<source src="movie.ogg" type="video/ogg">
+Ваш браузер не поддерживает video.
+</video>
   </body>
 </html>
